[package]
name = "cands_transport"
license = "MIT"
authors = ["DigitalServo"]
description = "This is a　transport layer for DigitalServo USB CAN board."
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
